--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -135,20 +135,23 @@ jobs:
         shell: python
         run: |
           import requests
-from bs4 import BeautifulSoup
-import re
-import zipfile
-import os
-import urllib.request
+          from bs4 import BeautifulSoup
+          import re
+          import zipfile
+          import os
+          import urllib.request
 
-arch = "${{ matrix.arch }}"
-release_type = "WIS"
+          arch = "${{ matrix.arch }}"
 
-res = requests.post("https://store.rg-adguard.net/api/GetFiles", f"type=CategoryId&url=858014f3-3934-4abe-8078-4aa193e74ca8&ring={release_type}&lang=en-US", headers={
-    "content-type": "application/x-www-form-urlencoded"
-}, verify=False)  # source site has expired cert
-
-html = BeautifulSoup(res.content, "lxml")
+          #release_type_map = {"retail": "Retail", "release preview": "RP", "insider slow": "WIS", "insider fast": "WIF"}
+          #release_type_map = "WIS"
+          #release_type = release_type_map["${{ matrix.release_type }}"] if "${{ matrix.release_type }}" != "" else "Retail"	
+          release_type = "WIS"
+          res = requests.post("https://store.rg-adguard.net/api/GetFiles", f"type=CategoryId&url=858014f3-3934-4abe-8078-4aa193e74ca8&ring={release_type}&lang=en-US", headers={	
+              "content-type": "application/x-www-form-urlencoded"	
+          }, verify=False) # source site has expired cert
+          
+          html = BeautifulSoup(res.content, "lxml")
 
 # Function to download a file
 def download_file(file_name, regex_pattern):
