--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -153,26 +153,26 @@ jobs:
           
           html = BeautifulSoup(res.content, "lxml")
 
-# Function to download a file
-def download_file(file_name, regex_pattern):
-    a = html.find("a", string=re.compile(regex_pattern))
-    if a is not None:
-        link = a["href"]
-        print(f"downloading link: {link}", flush=True)
-        out_file = file_name
-        if not os.path.isfile(out_file):
-            urllib.request.urlretrieve(link, out_file)
-    else:
-        print(f"No link found for {file_name}")
+          a = html.find("a", string=re.compile(f"Microsoft\.UI\.Xaml\..*_{arch}_.*\.appx"))
+          link = a["href"]
+          print(f"downloading link: {"http://tlu.dl.delivery.mp.microsoft.com/filestreamingservice/files/251bbb12-dbfc-4820-b0ff-c4dfa70ffb09?P1=1702077667&P2=404&P3=2&P4=LHtQbC5WMdy27a41ghu7IwjHKNe0HQYEqMvS2p7lLKDl7iQyUfABIF1tVRhx9FCjt2VOCxO4MzTXVUGo4Wk45w%3d%3d"}", flush=True)
+          out_file = "xaml.appx"
+          if not os.path.isfile(out_file):
+              urllib.request.urlretrieve(link, out_file)
 
-# Download Microsoft.UI.Xaml
-download_file("xaml.appx", f"Microsoft\.UI\.Xaml\..*_{arch}_.*\.appx")
+          a = html.find("a", string=re.compile(f"Microsoft\.VCLibs\..*_{arch}_.*\.appx"))
+          link = a["href"]
+          print(f"downloading link: {"http://tlu.dl.delivery.mp.microsoft.com/filestreamingservice/files/28edaebf-8019-4844-ba32-8ab019bc9391?P1=1702077593&P2=404&P3=2&P4=f7zXpT7YkIRncrPGU3nHHofkIGtvTyCLrID5lhS5h8Tg6kDZCKyi8pLld6XQpNgSRkEGQXbTqoMEUOwwqfYjMA%3d%3d"}", flush=True)
+          out_file = "vclibs.appx"
+          if not os.path.isfile(out_file):
+              urllib.request.urlretrieve(link, out_file)
 
-# Download Microsoft.VCLibs
-download_file("vclibs.appx", f"Microsoft\.VCLibs\..*_{arch}_.*\.appx")
-
-# Download Windows Subsystem for Android
-download_file("wsa.zip", "MicrosoftCorporationII\.WindowsSubsystemForAndroid_.*\.msixbundle")
+          a = html.find("a", string=re.compile("MicrosoftCorporationII\.WindowsSubsystemForAndroid_.*\.msixbundle"))
+          link = a["href"]
+          print(f"downloading link: {http://tlu.dl.delivery.mp.microsoft.com/filestreamingservice/files/f2b59894-efdf-4dde-8b2c-23012b4b3cf6?P1=1702105713&P2=404&P3=2&P4=cAEVLznNcDs9F8LMr%2b9UmTmzGNuNl27%2bN3wkY4%2f%2f5E3gDUY837DOgq8GYUJo7SKyu%2foGFo4LnImyYJCtfDHhaQ%3d%3d}", flush=True)
+          out_file = "wsa.zip"
+          if not os.path.isfile(out_file):
+              urllib.request.urlretrieve(link, out_file)
 
 
           zip_name = ""
