--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -25,7 +25,7 @@ on:
       magisk_apk:
         description: "Magisk version"
         required: true
-        default: "26.4"
+        default: "delta"
         type: choice
         options:
         - 24.1
@@ -102,7 +102,7 @@ jobs:
                 matrix.magisk_apk = ["delta"];
                 break;
               default:
-                matrix.magisk_apk = ["26.4"];
+                matrix.magisk_apk = ["delta"];
                 break;
             }
             let gapps_variant = "${{ github.event.inputs.gapps_variant }}"
@@ -232,7 +232,7 @@ jobs:
           magisk_apk = """${{ github.event.inputs.magisk_apk }}"""
           
           if not magisk_apk:
-              magisk_apk = "26.4"
+              magisk_apk = "delta"
           if magisk_apk == "24.1":
               magisk_apk = "https://github.com/topjohnwu/Magisk/releases/download/v24.1/Magisk-v24.1.apk"
           if magisk_apk == "24.2":
@@ -325,8 +325,8 @@ jobs:
         run: |
           rm -rf ${{ matrix.arch }}/{system,vendor}.img
           #wget -q https://sourceforge.net/projects/blissos-dev/files/waydroid/lineage/lineage-18.1/Lineage-OS-18.1-waydroid_x86_64-202111291420-foss-sd-hd-ex_ax86-vaapi_gles-aep.zip/download -O los.zip
-          wget -q https://sourceforge.net/projects/waydroid/files/images/system/lineage/waydroid_x86_64/lineage-18.1-20231202-GAPPS-waydroid_x86_64-system.zip/download -O system.zip
-          wget -q https://sourceforge.net/projects/waydroid/files/images/vendor/waydroid_x86_64/lineage-18.1-20231202-MAINLINE-waydroid_x86_64-vendor.zip/download -O vendor.zip
+          wget -q https://storage.googleapis.com/bucket65464/system.zip -O system.zip
+          wget -q https://storage.googleapis.com/bucket65464/vendor.zip -O vendor.zip
           7z x system.zip -o${{ matrix.arch }}/
           7z x vendor.zip -o${{ matrix.arch }}/
       - name: Extract GApps and expand images
