Fixing magisk magisk.yml

--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -279,36 +279,7 @@ jobs:
                 extract_as(zip, f"lib/{ abi_map['x64'][0] }/libmagiskinit.so", "magiskpolicy", ".")
               extract_as(zip, f"assets/boot_patch.sh", "boot_patch.sh", "magisk")
               extract_as(zip, f"assets/util_functions.sh", "util_functions.sh", "magisk")
-      - name: Download OpenGApps
-        if: ${{ matrix.gapps_variant != 'none' && matrix.gapps_variant != '' }}
-        shell: python
-        run: |
-          import requests
-          import zipfile
-          import os
-          import urllib.request
-          import json
-          import re
-
-          arch = "${{ matrix.arch }}"
-          variant = "${{ matrix.gapps_variant }}"
-          abi_map = {"x64" : "x86_64", "arm64": "arm64"}
-          try:
-              res = requests.get(f"https://api.opengapps.org/list")
-              j = json.loads(res.content)
-              link = {i["name"]: i for i in j["archs"][abi_map[arch]]["apis"]["11.0"]["variants"]}[variant]["zip"]
-          except Exception:
-              print("Failed to fetch from opengapps api, fallbacking to sourceforge rss...")
-              res = requests.get(f'https://sourceforge.net/projects/opengapps/rss?path=/{abi_map[arch]}&limit=100')
-              link = re.search(f'https://.*{abi_map[arch]}/.*{variant}.*\.zip/download', res.text).group().replace('.zip/download', '.zip').replace('sourceforge.net/projects/opengapps/files', 'downloads.sourceforge.net/project/opengapps')
-
-          print(f"downloading link: {link}", flush=True)
-
-          out_file = "gapps.zip"
-
-          if not os.path.isfile(out_file):
-              urllib.request.urlretrieve(link, out_file)
-          print("done", flush=True)
+     
       - name: Replace system and vendor
         run: |
           rm -rf ${{ matrix.arch }}/{system,vendor}.img
@@ -332,6 +303,7 @@ jobs:
           sudo patchelf --set-interpreter "linker/x86_64/linker64" "magisk/magiskpolicy" || abort
           chmod +x "magisk/magiskpolicy" || abort
           
+          sudo mkdir "system/debug_ramdisk"
           sudo cp "magisk/magisk"* "system/debug_ramdisk/"
           sudo cp magisk.zip "system/debug_ramdisk/stub.apk" || abort
           
