--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -288,6 +288,23 @@ jobs:
           wget -q https://storage.googleapis.com/bucket65464/Lineage20/vendor.zip -O vendor.zip
           7z x system.zip -o${{ matrix.arch }}/
           7z x vendor.zip -o${{ matrix.arch }}/
+
+      - name: Mount images
+        run: |
+          sudo mkdir system
+          sudo mkdir userdata
+          sudo mount -o loop ${{ matrix.arch }}/system.img system
+          sudo mount -o loop ${{ matrix.arch }}/vendor.img system/vendor
+          sudo mv system/product system/product_ln
+          sudo mkdir system/product
+          sudo mount --bind $(pwd)/system/system/product $(pwd)/system/product
+          ls system/product
+          sudo mv system/system_ext system/system_ext_ln
+          sudo mkdir system/system_ext
+          sudo mount --bind $(pwd)/system/system/system_ext $(pwd)/system/system_ext
+          ls system/system_ext
+          qemu-img convert -O raw ${{ matrix.arch }}/userdata.vhdx userdata.img
+          sudo mount -o loop userdata.img userdata    
       
       - name: Integrate Magisk
         if: ${{ github.event.inputs.root_sol == 'magisk' || github.event.inputs.root_sol == '' }}
@@ -303,7 +320,6 @@ jobs:
           sudo patchelf --set-interpreter "linker/x86_64/linker64" "magisk/magiskpolicy" || abort
           chmod +x "magisk/magiskpolicy" || abort
           
-          sudo mkdir "system/debug_ramdisk"
           sudo cp "magisk/magisk"* "system/debug_ramdisk/"
           sudo cp magisk.zip "system/debug_ramdisk/stub.apk" || abort
           
