--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -293,8 +293,8 @@ jobs:
         run: |
           sudo mkdir system
           sudo mkdir userdata
-          sudo mount -o loop ${{ matrix.arch }}/system.img system
-          sudo mount -o loop ${{ matrix.arch }}/vendor.img system/vendor
+          sudo mount -o rw,remount loop ${{ matrix.arch }}/system.img system
+          sudo mount -o rw,remount loop ${{ matrix.arch }}/vendor.img system/vendor
           sudo mv system/product system/product_ln
           sudo mkdir system/product
           sudo mount --bind $(pwd)/system/system/product $(pwd)/system/product
