--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -279,7 +279,36 @@ jobs:
                 extract_as(zip, f"lib/{ abi_map['x64'][0] }/libmagiskinit.so", "magiskpolicy", ".")
               extract_as(zip, f"assets/boot_patch.sh", "boot_patch.sh", "magisk")
               extract_as(zip, f"assets/util_functions.sh", "util_functions.sh", "magisk")
-     
+      - name: Download OpenGApps
+        if: ${{ matrix.gapps_variant != 'none' && matrix.gapps_variant != '' }}
+        shell: python
+        run: |
+          import requests
+          import zipfile
+          import os
+          import urllib.request
+          import json
+          import re
+
+          arch = "${{ matrix.arch }}"
+          variant = "${{ matrix.gapps_variant }}"
+          abi_map = {"x64" : "x86_64", "arm64": "arm64"}
+          try:
+              res = requests.get(f"https://api.opengapps.org/list")
+              j = json.loads(res.content)
+              link = {i["name"]: i for i in j["archs"][abi_map[arch]]["apis"]["11.0"]["variants"]}[variant]["zip"]
+          except Exception:
+              print("Failed to fetch from opengapps api, fallbacking to sourceforge rss...")
+              res = requests.get(f'https://sourceforge.net/projects/opengapps/rss?path=/{abi_map[arch]}&limit=100')
+              link = re.search(f'https://.*{abi_map[arch]}/.*{variant}.*\.zip/download', res.text).group().replace('.zip/download', '.zip').replace('sourceforge.net/projects/opengapps/files', 'downloads.sourceforge.net/project/opengapps')
+
+          print(f"downloading link: {link}", flush=True)
+
+          out_file = "gapps.zip"
+
+          if not os.path.isfile(out_file):
+              urllib.request.urlretrieve(link, out_file)
+          print("done", flush=True)
       - name: Replace system and vendor
         run: |
           rm -rf ${{ matrix.arch }}/{system,vendor}.img
@@ -288,14 +317,23 @@ jobs:
           wget -q https://storage.googleapis.com/bucket65464/Lineage20/vendor.zip -O vendor.zip
           7z x system.zip -o${{ matrix.arch }}/
           7z x vendor.zip -o${{ matrix.arch }}/
-
+      - name: Extract GApps and expand images
+        if: ${{ matrix.gapps_variant != 'none' && matrix.gapps_variant != '' }}
+        run: |
+          mkdir gapps
+          unzip -p gapps.zip {Core,GApps}/'*.lz' | tar --lzip -C gapps -xvf - -i --strip-components=2 --exclude='setupwizardtablet-x86_64' --exclude='packageinstallergoogle-all' --exclude='speech-common' --exclude='markup-lib-arm' --exclude='markup-lib-arm64' --exclude='markup-all' --exclude='setupwizarddefault-x86_64' --exclude='pixellauncher-all' --exclude='pixellauncher-common'
+          e2fsck -yf-b 8193 ${{ matrix.arch }}/system.img
+          resize2fs ${{ matrix.arch }}/system.img $(( $(du -sB512 gapps | cut -f1) + $(du -sB512 ${{ matrix.arch }}/system.img | cut -f1) ))s
+      - name: Expand vendor
+        run: |
+          e2fsck -yf -b 8193 ${{ matrix.arch }}/vendor.img
+          resize2fs ${{ matrix.arch }}/vendor.img 512M
       - name: Mount images
         run: |
           sudo mkdir system
           sudo mkdir userdata
           sudo mount -o loop ${{ matrix.arch }}/system.img system
           sudo mount -o loop ${{ matrix.arch }}/vendor.img system/vendor
-          sudo mount -o rw,remount system
           sudo mv system/product system/product_ln
           sudo mkdir system/product
           sudo mount --bind $(pwd)/system/system/product $(pwd)/system/product
@@ -305,8 +343,7 @@ jobs:
           sudo mount --bind $(pwd)/system/system/system_ext $(pwd)/system/system_ext
           ls system/system_ext
           qemu-img convert -O raw ${{ matrix.arch }}/userdata.vhdx userdata.img
-          sudo mount -o loop userdata.img userdata    
-      
+          sudo mount -o loop userdata.img userdata
       - name: Integrate Magisk
         if: ${{ github.event.inputs.root_sol == 'magisk' || github.event.inputs.root_sol == '' }}
         run: |
