--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -125,7 +125,7 @@ jobs:
         run: |
           pip3 install beautifulsoup4 lxml
           sudo apt-get update && sudo apt-get install setools lzip qemu-utils wine winetricks patchelf attr
-          sudo apt upgrade e2fsck
+          sudo apt upgrade e2fsck-static
           wget -qO- "$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/archive/$GITHUB_REF.tar.gz" | sudo tar --wildcards -zxvf- -C ~ --strip-component=2 '*/wine/*' '*/linker/*'
           winetricks msxml6
       - name: Download WSA
