--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -318,17 +318,17 @@ jobs:
           wget -q https://storage.googleapis.com/bucket65464/Lineage20/vendor.zip -O vendor.zip
           7z x system.zip -o${{ matrix.arch }}/
           7z x vendor.zip -o${{ matrix.arch }}/
-      - name: Extract GApps and expand images
-        if: ${{ matrix.gapps_variant != 'none' && matrix.gapps_variant != '' }}
-        run: |
-          mkdir gapps
-          unzip -p gapps.zip {Core,GApps}/'*.lz' | tar --lzip -C gapps -xvf - -i --strip-components=2 --exclude='setupwizardtablet-x86_64' --exclude='packageinstallergoogle-all' --exclude='speech-common' --exclude='markup-lib-arm' --exclude='markup-lib-arm64' --exclude='markup-all' --exclude='setupwizarddefault-x86_64' --exclude='pixellauncher-all' --exclude='pixellauncher-common'
-          e2fsck -yf ${{ matrix.arch }}/system.img
-          resize2fs ${{ matrix.arch }}/system.img $(( $(du -sB512 gapps | cut -f1) + $(du -sB512 ${{ matrix.arch }}/system.img | cut -f1) ))s
-      - name: Expand vendor
-        run: |
-          e2fsck -yf ${{ matrix.arch }}/vendor.img
-          resize2fs ${{ matrix.arch }}/vendor.img 512M
+     # - name: Extract GApps and expand images
+      #  if: ${{ matrix.gapps_variant != 'none' && matrix.gapps_variant != '' }}
+       # run: |
+        #  mkdir gapps
+         # unzip -p gapps.zip {Core,GApps}/'*.lz' | tar --lzip -C gapps -xvf - -i --strip-components=2 --exclude='setupwizardtablet-x86_64' --exclude='packageinstallergoogle-all' --exclude='speech-common' --exclude='markup-lib-arm' --exclude='markup-lib-arm64' --exclude='markup-all' --exclude='setupwizarddefault-x86_64' --exclude='pixellauncher-all' --exclude='pixellauncher-common'
+         # e2fsck -yf ${{ matrix.arch }}/system.img
+         # resize2fs ${{ matrix.arch }}/system.img $(( $(du -sB512 gapps | cut -f1) + $(du -sB512 ${{ matrix.arch }}/system.img | cut -f1) ))s
+     # - name: Expand vendor
+      #  run: |
+       #   e2fsck -yf ${{ matrix.arch }}/vendor.img
+        #  resize2fs ${{ matrix.arch }}/vendor.img 512M
       - name: Mount images
         run: |
           sudo mkdir system
